# mcp-trino-optimizer

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-skeleton-safety-foundation/: 01-01-SUMMARY.md  01-01-test-harness-scaffold-PLAN.md  01-02-SUMMARY.md  01-02-safety-primitives-PLAN.md  01-03-SUMMARY.md  01-03-settings-logging-runtime-PLAN.md  01-04-SUMMARY.md  01-04-app-tools-transports-cli-PLAN.md  01-05-SUMMARY.md  01-05-docker-docs-PLAN.md  01-06-SUMMARY.md  01-06-ci-precommit-PLAN.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-HUMAN-UAT.md  01-RESEARCH.md  01-UAT.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-trino-adapter-read-only-gate/: 02-01-PLAN.md  02-01-classifier-auth-settings-SUMMARY.md  02-02-PLAN.md  02-02-hexagonal-ports-offline-SUMMARY.md  02-03-PLAN.md  02-03-trino-client-pool-cancel-SUMMARY.md  02-04-PLAN.md  02-04-capabilities-live-adapters-SUMMARY.md  02-05-PLAN.md  02-05-integration-harness-ci-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW-FIX.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/phases/03-plan-parser-normalizer/: 03-01-SUMMARY.md  03-01-parser-models-normalizer-PLAN.md  03-02-SUMMARY.md  03-CONTEXT.md  03-RESEARCH.md  (+8 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
.testing/: docker-compose.yml
scripts/: capture_fixtures.py
src/mcp_trino_optimizer/: __init__.py  _context.py  _runtime.py  _version.py  app.py  cli.py  logging_setup.py  settings.py  transports.py
tests/: __init__.py  conftest.py  test_runtime.py  test_settings.py
tests/adapters/: test_auth.py  test_auth_retry.py  test_capabilities.py  test_offline_plan_source.py  test_offline_plan_source_v2.py  test_pool.py  test_port_conformance.py  test_ports.py  test_query_logging.py  test_trino_client_invariant.py
tests/docs/: __init__.py  test_readme_mcp_blocks.py
tests/integration/: conftest.py  fixtures.py  test_auth.py  test_cancellation.py  test_capabilities.py  test_event_loop_lag.py  test_fetch_plans.py  test_metadata_tables.py
tests/logging/: __init__.py  test_redaction.py  test_structured_fields.py
tests/parser/: test_fixture_snapshots.py  test_models.py  test_normalizer.py  test_parser.py
tests/recommender/: conftest.py  test_bottleneck.py  test_conflicts.py  test_engine.py  test_engine_integration.py  test_health.py  test_impact.py  test_models.py  test_scoring.py  test_session_properties.py  test_templates.py
tests/rules/: test_d11_cost_vs_actual.py  test_engine.py  test_engine_isolation.py  test_findings.py  test_i1_small_files.py  test_i3_delete_files.py  test_i6_stale_snapshots.py  test_i8_partition_transform.py  test_r1_missing_stats.py  test_r2_partition_pruning.py  test_r3_predicate_pushdown.py  test_r4_dynamic_filtering.py  test_r5_broadcast_join.py  test_r6_join_order.py  test_r7_skew.py  test_r8_exchange.py  test_r9_low_selectivity.py  test_registry.py  test_thresholds.py
tests/safety/: __init__.py  test_envelope.py  test_schema_lint.py  test_sql_classifier.py  test_stdout_guard.py
tests/smoke/: __init__.py  test_http_bearer.py  test_stdio_initialize.py
tests/tools/: __init__.py  test_selftest.py
tests/unit/: test_parser_walk.py
(+104 files in other folders)
